# fastapi_template

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: push_develop.yml  push_main.yml
alembic/: env.py
src/: .env.example  .env.test  api_config.py  api_constants.py  api_exceptions.py  base_repository.py  base_schemas.py  database.py  dependencies.py  main.py
src/healthcheck/: router.py  schemas.py
tests/: conftest.py
tests/integration/: conftest.py  healthcheck_router_test.py
