[project]
name = "fastapi-template"
version = "0.1.0"
description = "FastAPI repository template"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.116.1",
    "sqlalchemy[asyncio]>=2.0.41",
]

[dependency-groups]
dev = [
    "alembic>=1.16.4",
    "pytest-asyncio==0.20.3",
    "pytest==7.2.1",
    "tzdata>=2025.2",
    "ruff>=0.12.4",
    "coverage>=7.9.2",
    "faker>=37.4.2",
    "mypy>=1.18.1",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
    "fastapi.Form",
    "fastapi.params.Form",
    "fastapi.File",
    "fastapi.params.File",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"env.py" = ["F401", "F811"]

[tool.mypy]
python_version = "3.12"
# Base settings
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
warn_unreachable = true

# External libraries
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true

# Output settings
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "src.api_exceptions"
]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = "tests"
addopts = [
    "--import-mode=importlib"
]
asyncio_mode = "auto"
